switched tp another jquery for supporting old IE's

--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,8 @@
 				padding: 3px;
 			}
 		</style>
-		<script src="scripts/jquery-2.1.1.min.js"></script>
+		<script src="scripts/jquery-1.11.3.min.js"></script>
+		<script src="scripts/json2.min.js"></script>
 		<script src="scripts/sha256.js"></script>
 		<script src="scripts/main.js"></script>
 	</head>
