--- a/site/index.html
+++ b/site/index.html
@@ -1,16 +1,18 @@
-﻿<html>
+﻿<!DOCTYPE html>
+<html>
 	<head>
 		<title>knockProxy</title>
 		<style>
 			html
 			{
-				overflow-y: scroll;
+				overflow-y: auto;
+				height: 100%;
 			}
 			body, button, input,label {
 				margin: auto auto;
 				padding: 0;
 				font-family: 'Segoe UI', 'Tahoma';
-				/*height: 100%;*/
+				height: 100%;
 			}
 			h1,h2,h3 {
 				font-family: 'Segoe UI Light';
@@ -86,8 +88,8 @@
 						</div>
 					</form>
 				</div>
-				<div style="position: absolute;right: 0;bottom: 0;background: white;width: 100%;text-align: right;padding: 3px;font-style: italic;font-family: 'Consolas'">knockProxy by <b>force</b></div>
 			</div>
+			<div style="position: absolute;right: 0;bottom: 3px;background: white;width: 100%;text-align: right;padding: 3px;padding-right: 10px;font-style: italic;font-family: 'Consolas'">knockProxy by <b>force</b></div>
 		</div>
 	</body>
 </html>
