added option for using with http proxy (nginx, iis). small fixes

--- a/site/index.html
+++ b/site/index.html
@@ -75,7 +75,7 @@
 					<form>
 						<div id="divExtender">&nbsp;</div>
 						<div id="divWrongPassword" style="color: darkred; display: none">Неверный логин или пароль</div>
-						<div id="divSuccess" style="color: green; display: none">Созданный для вас биндинг: <span id="spBinding"></span> (<span id="spBindingRemain"></span> сек.)</div>
+						<div id="divSuccess" style="color: green; display: none">Созданный для вас биндинг: <span id="spBinding"></span>&nbsp;(<span id="spBindingRemain"></span> сек.)</div>
 						<div style="width: auto">
 							<div class="button-div">
 								<label for="tbLogin">Логин:</label>
